--- a/index.html
+++ b/index.html
@@ -7,56 +7,10 @@
 	</style>
 </head>
 	<body>
-		<p>Fakultas:
-		<select name="fakultas" id="fakultas">
-			<option value="FASILKOM">FASILKOM</option>
-			<option value="Ekonomi">Ekonomi</option>
-			<option value="FMIPA">FMIPA</option>
-		</select>
-		Jurusan :
-		<select name="jurusan" id="jurusan"></select>
-		</p>
-		<br><br>
-		<p> Pilihan Anda : <span id=hasil></span></p>
+		<form id="formKu" name="formKu" method="get" action="proses.php">
+		<p>Username: <input type="text" name="username" id="username"
+		required pattern="[A-Z]{3}[0-9]{3}"></p>
+		<p><input type="submit" name="submit" id="submit" value="Kirim Data"></p>
+		</form>
 	</body>
-	<script>
-		const fakultas = document.getElementById('fakultas')
-		const jurusan = document.getElementById('jurusan')
-		const hasil = document.getElementById('hasil')
-		
-		var jurFASILKOM = "";
-		var jurEkonomi = "";
-		var jurFMIPA = "";
-		fakultas.addEventListener( 'change', function () {
-			if (fakultas.value === "FASILKOM") {
-				jurFASILKOM = "<option value='Ilkom'>Ilmu Komputer</option>";
-				jurFASILKOM += "<option value='TI'>Teknik Informatika</option>";
-				jurFASILKOM += "<option value='SI'>Sistem Informasi</option>";
-				jurusan.innerHTML = jurFASILKOM;
-			}
-			if (fakultas.value === "Ekonomi") {
-				jurEkonomi = "<option value='Akuntansi'>Akuntansi</option>";
-				jurEkonomi += "<option value='Manajemen'>Manajemen</option>";
-				jurEkonomi += "<option value='Ilmu Ekonomi'>Ilmu Ekonomi</option>";
-				jurusan.innerHTML = jurEkonomi;	
-			}
-			if (fakultas.value === "FMIPA") {
-				jurFMIPA = "<option value='Matematika'>Matematika</option>";
-				jurFMIPA += "<option value='Fisika'>Fisika</option>";
-				jurFMIPA += "<option value='Kimia'>Kimia</option>";
-				jurFMIPA += "<option value='Biologi'>Biologi</option>";
-				jurusan.innerHTML = jurFMIPA;
-			}
-		})
-		window.addEventListener('load', function () {
-			jurFASILKOM = "<option value='Ilkom'>Ilmu Komputer</option>";
-				jurFASILKOM += "<option value='TI'>Teknik Informatika</option>";
-				jurFASILKOM += "<option value='SI'>Sistem Informasi</option>";
-				jurusan.innerHTML = jurFASILKOM;
-		})
-
-		jurusan.addEventListener('click', function () {
-			hasil.innerHTML = "Fakultas " + fakultas.value + " Jurusan " + jurusan.value
-		})
-	</script>
 </html>
